Ajout de la partie header

--- a/P2_PAYS_code/index.html
+++ b/P2_PAYS_code/index.html
@@ -5,17 +5,35 @@
         <meta charset="utf-8">
 
         <link rel="stylesheet" type="text/css" href="./css/general.css">
+        <link rel="stylesheet" type="text/css" href="./css/header.css">
 
         <title>Booki</title>
     </head>
 
     <body>
         <header>
-
+            <div id="container_logo">
+                <img src="./images/logo/Booki.png"  width="50%" height="45%"/>
+            </div>
+            <nav>
+                <div class="element_nav element_nav_active">
+                    <a class="active" href="#"> <strong>Hébergements</strong></a>
+                </div>
+                <div class="element_nav">
+                    <a href="#"><strong>Activités</strong></a>
+                </div>
+            </nav>
         </header>
 
         <main>
+            <h3>
+                Trouvez votre hébergements pour des vacances de rêve
+            </h3>
+            <p >
+                En  plein centre ville ou en pleine nature 
+            </p>
 
+            
         </main>
 
         <footer>
