ajout se la souris en mode pointer lors du survol

--- a/P2_PAYS_code/index.html
+++ b/P2_PAYS_code/index.html
@@ -41,13 +41,13 @@
                 </div>
 
                 <div id="container_inputs">
-                    <input type="text" placeholder="Ville" id="ville" />
+                    <input type="text" placeholder="Ville" id="ville" required/>
 
                     <div id="separateur_inputs">
                         <p>,</p>
                     </div>
                     
-                    <input type="text" placeholder="Pays" id="pays"/>
+                    <input type="text" placeholder="Pays" id="pays"  required/>
                 </div>
 
                 <input type="submit" value="Rechercher" id="submit"/>
