oublie de quelque changement

--- a/P2_PAYS_code/index.html
+++ b/P2_PAYS_code/index.html
@@ -68,7 +68,7 @@
 
             <!-- partie filtres  -->
             <div class="container_filtres">
-                <p style="margin: 5px;">Filtres</p>
+                <p class="margin5">Filtres</p>
 
                 <div class="item_filtres" onclick="clickFiltres(0)">
                     <div class="rond_filtres">
@@ -200,7 +200,7 @@
                             </div>
                         </a>
 
-                        <p style="font-size:17px; padding: 20px 0px 0px 5px;">Afficher plus</p>
+                        <p class="show_more_hebergement">Afficher plus</p>
                     </div>
 
                 </div>
