fin d'un menu manque les animations css

--- a/P3_PAYS_code/src/index.html
+++ b/P3_PAYS_code/src/index.html
@@ -4,8 +4,9 @@
     <head> 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="./css/reset.css">
         <link rel="stylesheet" type="text/css" href="./sass/main.css">
+        <link rel="stylesheet" type="text/css" href="./css/reset.css">
+
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/9529e48c4d.js" crossorigin="anonymous"></script>
@@ -122,7 +123,7 @@
                         
                     </div>
 
-                    <div class="restaurant-item">
+                    <a class="restaurant-item" href="./menu_html/restaurant_a_la_francaise.html">
                         <img class="restaurant-item__image" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image restaurant à la française"/>
                         <div class="item-info" >
                             <div class="item-info__title"> 
@@ -133,7 +134,7 @@
                                 <i class="fa-regular fa-heart"></i>
                             </span>
                         </div>
-                    </div>
+                    </a>
 
                     <div class="restaurant-item">
                         <img class="restaurant-item__image" src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image restaurant à la française"/>
