ajout animation check

--- a/P3_PAYS_code/src/menu_html/restaurant_a_la_francaise.html
+++ b/P3_PAYS_code/src/menu_html/restaurant_a_la_francaise.html
@@ -43,14 +43,14 @@
                     
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text text_trunc">Tartare de poulpe acidulé</p>
+                            <p class="text menu-item__text">Tartare de poulpe acidulé</p>
                             <div class="menu-item__info">
                                 <p class="text text_trunc">Aux zestes d'orange</p>
                                 <p class="text menu-item__price">25€</p>
                             </div>
                         </div>
-                        <div class="menu-item__check">
-                            <div class="menu-item__check--anime">
+                        <div class="check">
+                            <div class="check--anime">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
@@ -59,14 +59,14 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text text_trunc">Velouté de légumes d'antan</p>
+                            <p class="text menu-item__text">Velouté de légumes d'antan</p>
                             <div class="menu-item__info">
                                 <p class="text text_trunc" >Carotte, panais, topinambour</p>
                                 <p class="text menu-item__price">35€</p>
                             </div>
                         </div>
-                        <div class="menu-item__check">
-                            <div class="menu-item__check--anime">
+                        <div class="check">
+                            <div class="check--anime">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
@@ -74,14 +74,14 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text text_trunc">Soupe à l'oignon</p>
+                            <p class="text menu-item__text">Soupe à l'oignon</p>
                             <div class="menu-item__info">
                                 <p class="text text_trunc">Revisitée</p>
                                 <p class="text menu-item__price">20€</p>
                             </div>
                         </div> 
-                        <div class="menu-item__check">
-                            <div class="menu-item__check--anime">
+                        <div class="check">
+                            <div class="check--anime">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
@@ -95,14 +95,14 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text text_trunc">Coquilles Saint-Jacques</p>
+                            <p class="text menu-item__text">Coquilles Saint-Jacques</p>
                             <div class="menu-item__info">
                                 <p class="text text_trunc">Accompagnées d'une purée de panais</p>
                                 <p class="text menu-item__price">40€</p>
                             </div>
                         </div>
-                        <div class="menu-item__check">
-                            <div class="menu-item__check--anime">
+                        <div class="check">
+                            <div class="check--anime">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
@@ -110,14 +110,14 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text text_trunc">Magret de canard</p>
+                            <p class="text menu-item__text">Magret de canard</p>
                             <div class="menu-item__info">
                                 <p class="text text_trunc">Et parmentier de pommes de terre</p>
                                 <p class="text menu-item__price">35€</p>
                             </div>
                         </div>  
-                        <div class="menu-item__check">
-                            <div class="menu-item__check--anime">
+                        <div class="check">
+                            <div class="check--anime">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
@@ -125,15 +125,15 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text text_trunc">Pigeonneau d’Ille-et-Vilaine</p>
+                            <p class="text menu-item__text">Pigeonneau d’Ille-et-Vilaine</p>
                             <div class="menu-item__info">
                                 <p class="text text_trunc">Sur son lit de gnocchis aux légumes</p>
                                 <p class="text menu-item__price">44€</p>
                             </div>
                         </div>
 
-                        <div class="menu-item__check">
-                            <div class="menu-item__check--anime">
+                        <div class="check">
+                            <div class="check--anime">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
@@ -147,15 +147,15 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text text_trunc">Pétales de violettes glacés</p>
+                            <p class="text menu-item__text">Pétales de violettes glacés</p>
                             <div class="menu-item__info">
                                 <p class="text text_trunc">Et purée de noisettes</p>
                                 <p class="text menu-item__price">18€</p>
                             </div>
                         </div>
 
-                        <div class="menu-item__check">
-                            <div class="menu-item__check--anime">
+                        <div class="check">
+                            <div class="check--anime">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
@@ -163,15 +163,15 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text text_trunc">Fondant au chocolat</p>
+                            <p class="text menu-item__text">Fondant au chocolat</p>
                             <div class="menu-item__info">
                                 <p class="text text_trunc">Revisité</p>
                                 <p class="text menu-item__price">22€</p>
                             </div>
                         </div>  
 
-                        <div class="menu-item__check">
-                            <div class="menu-item__check--anime">
+                        <div class="check">
+                            <div class="check--anime">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
@@ -179,15 +179,15 @@
 
                     <div class="menu-item">
                         <div class="menu-item__container">
-                            <p class="text menu-item__text text_trunc">Millefeuille croustillant</p>
+                            <p class="text menu-item__text">Millefeuille croustillant</p>
                             <div class="menu-item__info">
                                 <p class="text text_trunc">Myrtilles et pâte d’amande</p>
                                 <p class="text menu-item__price">23€</p>
                             </div>
                         </div>
 
-                        <div class="menu-item__check">
-                            <div class="menu-item__check--anime">
+                        <div class="check">
+                            <div class="check--anime">
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
