--- a/P3_PAYS_code/src/index.html
+++ b/P3_PAYS_code/src/index.html
@@ -99,7 +99,9 @@
                             </div>
                             <span class="item-info__heart">
                                 <i class="fa-regular fa-heart"></i>
-                                <!-- <i class="fa-solid fa-heart"></i> -->
+                            </span>
+                            <span class="heart--active">
+                                <i class='fa-solid fa-heart'></i>
                             </span>
                         </div>
                     </div>
@@ -119,6 +121,9 @@
                             <span class="item-info__heart">
                                 <i class="fa-regular fa-heart"></i>
                             </span> 
+                            <span class="heart--active">
+                                <i class='fa-solid fa-heart'></i>
+                            </span>
                         </div>
                         
                     </div>
@@ -133,6 +138,9 @@
                             <span class="item-info__heart">
                                 <i class="fa-regular fa-heart"></i>
                             </span>
+                            <span class="heart--active">
+                                <i class='fa-solid fa-heart'></i>
+                            </span>
                         </div>
                     </a>
 
@@ -145,6 +153,9 @@
                             </div>
                             <span class="item-info__heart">
                                 <i class="fa-regular fa-heart"></i>
+                            </span>
+                            <span class="heart--active">
+                                <i class='fa-solid fa-heart'></i>
                             </span>
                         </div>
                     </div>
