--- a/P3_PAYS_code/src/menu_html/restaurant_a_la_francaise.html
+++ b/P3_PAYS_code/src/menu_html/restaurant_a_la_francaise.html
@@ -35,6 +35,9 @@
                     <span class="item-info__heart">
                         <i class="fa-regular fa-heart"></i>
                     </span>
+                    <span class="heart--active">
+                        <i class='fa-solid fa-heart'></i>
+                    </span>
                 </div>
 
                 <div class="menu-container">
