Ajout animation coeur + animation d'affichage dans la page menu

--- a/P3_PAYS_code/src/index.html
+++ b/P3_PAYS_code/src/index.html
@@ -15,7 +15,7 @@
 
     <body>
 
-        <header class="header">
+        <header class="header container-global">
             <div class="header-container__logo">
                 <img class="logo" src="../images/logo/ohmyfood.png" alt="logo ohmyfood"/>
             </div>
@@ -97,9 +97,9 @@
                                 <p class="text item-info__title--text">La palette du goût</p>
                                 <p class="text">Ménilmontant</p>
                             </div>
-                            <span class="item-info__heart">
+                            <span class="heart">
                                 <i class="fa-regular fa-heart"></i>
-                            </span>
+                            </span> 
                             <span class="heart--active">
                                 <i class='fa-solid fa-heart'></i>
                             </span>
@@ -117,13 +117,13 @@
                             <div class="item-info__title"> 
                                 <p class="text item-info__title--text">La note enchantée</p>
                                 <p class="text">Charonne</p>
-                            </div>
-                            <span class="item-info__heart">
+                            </div>                           
+                            <span class="heart">
                                 <i class="fa-regular fa-heart"></i>
                             </span> 
                             <span class="heart--active">
                                 <i class='fa-solid fa-heart'></i>
-                            </span>
+                            </span>     
                         </div>
                         
                     </div>
@@ -135,7 +135,7 @@
                                 <p class="text item-info__title--text">À la française</p>
                                 <p class="text">Cité Rouge</p>
                             </div>
-                            <span class="item-info__heart">
+                            <span class="heart">
                                 <i class="fa-regular fa-heart"></i>
                             </span>
                             <span class="heart--active">
@@ -151,7 +151,7 @@
                                 <p class="text item-info__title--text">La délice des sens</p>
                                 <p class="text">Folie-Méricourt</p>
                             </div>
-                            <span class="item-info__heart">
+                            <span class="heart">
                                 <i class="fa-regular fa-heart"></i>
                             </span>
                             <span class="heart--active">
