--- a/P3_PAYS_code/src/menu_html/restaurant_a_la_francaise.html
+++ b/P3_PAYS_code/src/menu_html/restaurant_a_la_francaise.html
@@ -14,7 +14,7 @@
 
     <body>
 
-        <header class="header">
+        <header class="header container-global">
             <a class="header-arrow" href="../index.html">
                 <i class="fa-solid fa-arrow-left"></i>
             </a>
@@ -32,12 +32,12 @@
             <div class="menu gray">
                 <div class="menu-title__info">
                     <p class="title menu-title__text">À la française</p>
-                    <span class="item-info__heart">
+                    <span class="heart">
                         <i class="fa-regular fa-heart"></i>
-                    </span>
-                    <span class="heart--active">
+                    </span>    
+                    <span class="heart--active menu-heart">
                         <i class='fa-solid fa-heart'></i>
-                    </span>
+                    </span> 
                 </div>
 
                 <div class="menu-container">
