--- a/P3_PAYS_code/src/index.html
+++ b/P3_PAYS_code/src/index.html
@@ -14,7 +14,6 @@
     </head>
 
     <body>
-
         <header class="header container-global">
             <div class="header-container__logo">
                 <img class="logo" src="../images/logo/ohmyfood.png" alt="logo ohmyfood"/>
@@ -22,8 +21,9 @@
         </header>
 
         <main>
+            <div class="loader-item"></div>
             <!-- partie haute -->
-            <div class="container-global">
+            <div class="container-global loader-out">
                 <div class="container-location" >
                     <div class="container-location__item">
                         <span class="container-location__item--text container-location__item--icon ">
@@ -85,6 +85,7 @@
                 
                 <!-- partie restaurants -->
                 <div class="restaurant">
+                    
                     <p class="huge-text text restaurant-text">Restaurants</p>
 
                     <div class="restaurant-item">
