--- a/P3_PAYS_code/src/index.html
+++ b/P3_PAYS_code/src/index.html
@@ -41,44 +41,44 @@
 
             <!-- partie fonctionnement  -->
                 <div class="functioning">
-
                     <p class="text huge-text functioning-text">Fonctionnement</p>
+                    <div class="functioning-container">
+                        <div class="functioning-item">
+                            <div class="functioning-item__circle">
+                                <p class="text">1</p>
+                            </div>
 
-                    <div class="functioning-item">
-                        <div class="functioning-item__circle">
-                            <p class="text">1</p>
+                            <div class="functioning-item__info">
+                                <span class="functioning-item__info--icon" >
+                                    <i class="fa-solid fa-mobile-screen-button"></i>
+                                </span>
+                                <p class="text functioning-item__info--text">Choisissez un restaurant</p>
+                            </div>  
                         </div>
 
-                        <div class="functioning-item__info">
-                            <span class="functioning-item__info--icon" >
-                                <i class="fa-solid fa-mobile-screen-button"></i>
-                            </span>
-                            <p class="text functioning-item__info--text">Choisissez un restaurant</p>
-                        </div>  
-                    </div>
+                        <div class="functioning-item">
+                            <div class="functioning-item__circle">
+                                <p class="text">2</p>
+                            </div>
 
-                    <div class="functioning-item">
-                        <div class="functioning-item__circle">
-                            <p class="text">2</p>
+                            <div class="functioning-item__info">
+                                <span class="functioning-item__info--icon" >
+                                <i class="fa-solid fa-list"></i>
+                                </span>
+                                <p class="text functioning-item__info--text">Composez votre menu</p>
+                            </div>      
                         </div>
 
-                        <div class="functioning-item__info">
-                            <span class="functioning-item__info--icon" >
-                            <i class="fa-solid fa-list"></i>
-                            </span>
-                            <p class="text functioning-item__info--text">Composez votre menu</p>
-                        </div>      
-                    </div>
-
-                    <div class="functioning-item functioning-item--active ">
-                        <div class="functioning-item__circle">
-                            <p class="text">3</p>
-                        </div>
-                        <div class="functioning-item__info">
-                            <span class="functioning-item__info--icon functioning-item__info--icon--active" >
-                                <i class="fa-solid fa-store"></i>
-                            </span>
-                            <p class="text functioning-item__info--text">Dégustez au restaurant</p>
+                        <div class="functioning-item">
+                            <div class="functioning-item__circle">
+                                <p class="text">3</p>
+                            </div>
+                            <div class="functioning-item__info">
+                                <span class="functioning-item__info--icon" >
+                                    <i class="fa-solid fa-store"></i>
+                                </span>
+                                <p class="text functioning-item__info--text">Dégustez au restaurant</p>
+                            </div>
                         </div>
                     </div>
                 </div>
